# springmvc-agent-analyzer

./: .gitignore  CHEATSHEET.md  IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run_mcp_server.py  run_sdk_agent.py  verify_phase2.py
.claude/: settings.local.json
agents/: __init__.py  base_agent.py  business_process_agent.py  config_agent.py  controller_agent.py  database_agent.py  jsp_agent.py  mapper_agent.py  procedure_agent.py  service_agent.py  visualization_agent.py
analyzer_mcp/: __init__.py  server.py
config/: config.yaml  oracle_config.example.yaml  sdk_agent_config.example.yaml  sdk_agent_config.yaml
core/: __init__.py  cache_manager.py  config_loader.py  cost_tracker.py  db_connector.py  model_router.py  prompt_manager.py
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  MCP_INTEGRATION.md  MIGRATION_TO_SDK.md  PASSIVE_MODE_GUIDE.md  SDK_AGENT_GUIDE.md  SDK_AGENT_IMPLEMENTATION_PLAN.md  SDK_AGENT_SPECIFICATION.md  SDK_INTEGRATION_PROGRESS.md  TECHNICAL_SPECIFICATION.md  error-handling.md
examples/: sdk_agent_demo.py
graph/: __init__.py  graph_builder.py  query.py  schema.py
mcp/: __init__.py  server.py
scripts/: setup.py  test_integration.py
sdk_agent/: __init__.py  agent_factory.py  client.py  config.py  constants.py  error_formatter.py  exceptions.py  mcp_server_factory.py  permissions.py  sdk_imports.py  sdk_tools.py  utils.py
tests/: README.md  README_BENCHMARK.md  __init__.py  benchmark_controller.py
validators/: __init__.py  java_validator.py
(+86 files in other folders)
